# swagger_server/controllers/words_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from swagger_server.models.word import Word  # noqa: E501
 from swagger_server.models.words import Words  # noqa: E501
 from swagger_server import util
 
@@ -28,4 +29,34 @@ def find_words_by_status(status):  # noqa: E501
 
     :rtype: List[Words]
     """
+    return 'do some magic!'
+
+
+def get_words(limit=None, status=None):  # noqa: E501
+    """Get words to learn
+
+    Returns number of words to learn # noqa: E501
+
+    :param limit: number of words to return
+    :type limit: int
+    :param status: status of words to return
+    :type status: List[str]
+
+    :rtype: Words
+    """
+    return 'do some magic!'
+
+
+def mark_word_learned(body):  # noqa: E501
+    """Update word status for the user
+
+    This can only be done by the logged in user. # noqa: E501
+
+    :param body: Word object
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = Word.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
